Krish-Trailhead/src/objects/My_Daily_Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Name__c</fullName>
        <label>Expense Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food &amp; Beverages</fullName>
                </value>
                <value>
                    <fullName>Groceries</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Clothing and Footwear</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>My Daily Expenses</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDE - {000000000}</displayFormat>
        <label>My Daily Expenses  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Daily Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>